wacc/test/golden/syntaxErr.basic.badComment
# program has missing comment declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  oops, this is supposed to be a comment
  print "Hello World!\n"
end


In test/wacc_examples/invalid/syntaxErr/basic/badComment.wacc (line 12, column 7):
unexpected ","
expected array index or assignment
> begin
>   oops, this is supposed to be a comment
>       ^
>   print "Hello World!\n"
